@@ -7,6 +7,14 @@ Package author: Mikhail S. Dubrovin
 Please describe any modifications that you made to the package in the
 reverse time order.
 
+Tag: V01-00-43
+2018-05-07 Mikhail S. Dubrovin
+- update examples for jungfrau
+	modified:   app/jungfrau_gain_constants
+	modified:   examples/ex_epix10ka_det.py
+	modified:   examples/ex_jungfrau_det.py
+	modified:   src/UtilsJungfrau.py
+
 Tag: V01-00-42
 2018-05-04 Mikhail S. Dubrovin
 - app/jungfrau_gain_constants - add file deployment and logger
